--- a/index.html
+++ b/index.html
@@ -6,50 +6,61 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
+            background-color: #f0f2f5;
         }
 
-        .container {
-            width: 400px;
+        .form-box {
+            width: 420px;
             margin: 50px auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 5px;
+            background: white;
+            padding: 25px;
+            border-radius: 6px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
 
         h2 {
             text-align: center;
+            margin-bottom: 20px;
+        }
+
+        label {
+            font-weight: bold;
         }
 
         input[type="text"],
-        input[type="email"],
         input[type="password"] {
             width: 100%;
             padding: 8px;
             margin-top: 5px;
+            margin-bottom: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
 
         .error {
             color: red;
             font-size: 13px;
+            margin-bottom: 8px;
+            display: block;
         }
 
         .gender {
-            margin-top: 5px;
+            margin: 5px 0;
         }
 
         button {
             width: 100%;
             padding: 10px;
-            background-color: #4CAF50;
+            background-color: #007bff;
             color: white;
             border: none;
-            margin-top: 15px;
+            border-radius: 4px;
             cursor: pointer;
+            font-size: 15px;
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #0056b3;
         }
     </style>
 </head>
