--- a/index.html
+++ b/index.html
@@ -4,64 +4,63 @@
     <meta charset="UTF-8">
     <title>Registration Form</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f2f5;
-        }
+* {
+    box-sizing: border-box;
+}
 
-        .form-box {
-            width: 400px;
-            margin: 50px auto;
-            background: white;
-            padding: 25px;
-            border-radius: 12px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f2f5;
+}
 
-        h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
+.form-box {
+    width: 420px;
+    margin: 50px auto;
+    background: white;
+    padding: 25px;
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
 
-        label {
-            font-weight: bold;
-        }
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
 
-        input[type="text"],
-        input[type="password"] {
-            width: 100%;
-            padding: 8px;
-            margin-top: 5px;
-            margin-bottom: 5px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
+label {
+    font-weight: bold;
+}
 
-        .error {
-            color: red;
-            font-size: 13px;
-            margin-bottom: 8px;
-            display: block;
-        }
+input[type="text"],
+input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin: 6px 0 2px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
 
-        .gender {
-            margin: 5px 0;
-        }
+.error {
+    color: red;
+    font-size: 13px;
+    margin-bottom: 8px;
+    display: block;
+}
 
-        button {
-            width: 100%;
-            padding: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 15px;
-        }
+.gender {
+    margin: 6px 0;
+}
 
-        button:hover {
-            background-color: #0056b3;
-        }
+button {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
     </style>
 </head>
 <body>
