--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
             margin: 6px 0;
         }
 
-        /* Register button styling */
         input[type="submit"] {
             width: 100%;
             padding: 10px;
@@ -181,7 +180,7 @@ function validate() {
             "Registration successful!";
     }
 
-    return false; // prevent page refresh for demo
+    return false; 
 }
 </script>
 
